seperating paragraphs: biochemical and VOC

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -7730,6 +7730,26 @@
   file = {/Users/nidhivinod/Zotero/storage/B3H6D3AB/Muller et al. - 2021 - Evidence for efficient non-evaporative leaf-to-air.pdf;/Users/nidhivinod/Zotero/storage/3YHAW7LI/2021.02.01.429145v2.full.html;/Users/nidhivinod/Zotero/storage/Y9A9XRZJ/2021.02.01.429145v2.full.html}
 }
 
+@article{murchieDynamicNonphotochemicalQuenching2020,
+  title = {Dynamic Non-Photochemical Quenching in Plants: From Molecular Mechanism to Productivity},
+  shorttitle = {Dynamic Non-Photochemical Quenching in Plants},
+  author = {Murchie, Erik H. and Ruban, Alexander V.},
+  date = {2020},
+  journaltitle = {The Plant Journal},
+  volume = {101},
+  number = {4},
+  pages = {885--896},
+  issn = {1365-313X},
+  doi = {10.1111/tpj.14601},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/tpj.14601},
+  urldate = {2022-01-23},
+  abstract = {Photoprotection refers to a set of well defined plant processes that help to prevent the deleterious effects of high and excess light on plant cells, especially within the chloroplast. Molecular components of chloroplast photoprotection are closely aligned with those of photosynthesis and together they influence productivity. Proof of principle now exists that major photoprotective processes such as non-photochemical quenching (NPQ) directly determine whole canopy photosynthesis, biomass and yield via prevention of photoinhibition and a momentary downregulation of photosynthetic quantum yield. However, this phenomenon has neither been quantified nor well characterized across different environments. Here we address this problem by assessing the existing literature with a different approach to that taken previously, beginning with our understanding of the molecular mechanism of NPQ and its regulation within dynamic environments. We then move to the leaf and the plant level, building an understanding of the circumstances (when and where) NPQ limits photosynthesis and linking to our understanding of how this might take place on a molecular and metabolic level. We argue that such approaches are needed to fine tune the relevant features necessary for improving dynamic NPQ in important crop species.},
+  langid = {english},
+  keywords = {dissipation,dynamic,light,photoprotection,photosynthesis,thylakoid},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/tpj.14601},
+  file = {/Users/nidhivinod/Zotero/storage/87XUN8NJ/Murchie and Ruban - 2020 - Dynamic non-photochemical quenching in plants fro.pdf}
+}
+
 @article{musselmanEstimationSolarDirect2013,
   title = {Estimation of Solar Direct Beam Transmittance of Conifer Canopies from Airborne {{LiDAR}}},
   author = {Musselman, Keith N. and Margulis, Steven A. and Molotch, Noah P.},
