--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -232,6 +232,10 @@ Certainly, a discussion with a micrometeorologist or atmospheric scientist, if n
 
 I was eager to see the part of the manuscript about photoprotection and also its relationship to heat damage. The opening sentence (l. 384) was obvious to the point of being painful to read.  Of course photoprotection is higher in the upper canopy: radiation levels are higher! Can this first sentence get revised to increase information content? This is one of the more exciting topics of the review, yet is handled only in a cursory fashion. If the authors could manage a bit more discussion of this topic it would be useful – instead they move (in the same paragraph) to VOC emissions, something I view as a separate capability of some plants. This is also confused in Fig. 1 where VAZ and VOC are placed on the same line. I’d like to see a more complete discussion of photoprotection and heat dissipation by NPQ first, and a separate paragraph about VOC. Also, there is nothing about critical temperature until late in the manuscript even though the authors skirt the issue in their text about photoprotection. This kind of thermal sensitivity is different from gas exchange (the section where the text about Tcrit occurs, l. 530-555), and should have been discussed earlier in the manuscript.
 
+**We seperated VAZ section from VOC, and provided further context to NPQ in the following lines:**
+
+- **Efficient light-use is optimized through this process while preventing the accumulation of excess light, provoking the over production of harmful reactive oxygen species (ROS). However, at a photon flux density (PPFD) of $200\mu molm^{-2}s^{-1}$, within beech canopy, shaded lower canopy leaves have been observed to have higher NPQ rates than upper canopy reflecting rapid photosynthetic kinetics in shaded leaves as an acclimation to sunflecks. However, beyond this PPFD threshold, NPQ rates of upper canopy increase with an increase in light intensity [@scartazzaInvestigatingEuropeanBeech2016a]. The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].**
+
 *[issue #92](https://github.com/EcoClimLab/vertical-thermal-review/issues/92)*
 **It is not necessarily obvious that mid- or lower-canopy leaves should have less photoprotection, given that they may experience nearly the same peak radiation loads, during sunflecks, as leaves in the upper canopy, despite generally having less capacity to dissipate light by photochemistry.** 
 
