added canopy die-back information
maybe I need to expand a little more o n it?

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3905,6 +3905,17 @@
   file = {/Users/nidhivinod/Zotero/storage/DTYVNKJT/Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;/Users/nidhivinod/Zotero/storage/2456AM7X/j.1469-8137.2002.00410.html}
 }
 
+@article{groomHeatDamageSclerophylls2004,
+  title = {Heat Damage in Sclerophylls Is Influenced by Their Leaf Properties and Plant Environment},
+  author = {Groom, Philip and Lamont, Byron and Leighton, Sylvia and Leighton, Pattie and Burrows, Chantal},
+  date = {2004-01-01},
+  journaltitle = {Ecoscience},
+  volume = {11},
+  doi = {10.1080/11956860.2004.11682813},
+  abstract = {Mediterranean southwestern Australia experienced two successive days of extreme ({$>$}45 deg C) maximum temperatures and hot winds during the summer of 1991, resulting in adult mortality and extensive crown damage in a sclerophyllous mallee-heathland. To investigate the relationship between leaf attributes, plant environment, and heat tolerance in sclerophylls, measurements of plant height, leaf clustering, leaf morphology (thickness, dry density, area, perimeter/area ratio), percentage crown damage, and percentage mortality, and categories of exposure to wind, shade, and bare soils were recorded for 40 heat-damaged and 14 undamaged co-occurring species. Analyzing the entire dataset by principal components analysis showed that undamaged species had thicker leaves (on average 61\% thicker) than species with damaged leave and were more exposed to wind, sun, and bare soil. Thicker leaves are a common respone to hot, dry, and more exposed environments and are more heat tolerant than thinner leaves. A separate analysis of the Proteaceae (25 damaged and six undamaged species) showed a similar trend to the overall dataset. An analysis of the Myrtaceae (10 damaged and three undamaged species) showed that wind exposure and level of shading were the most important variables influencing the degree of leaf damage. Percentage leaf damage was significantly correlated with percentage adult mortality, but not with the ability of a species to regrow (percentage of plants producing new shoots). Differences between undamaged and damaged species may be a result of preconditioning, whereby species growing in more exposed habitats were pre-adapted to tolerate periods of heat stress. It is unlikely that the study species were able to reduce leaf temperatures via transpirational cooling during the hottest part of the 2-d heatwave. The ability of a species to tolerate extreme temperature events will be determined by the interaction between leaf heat loads, leaf heat-storing capacity, and the degree of exposure to environmental elements.},
+  file = {/Users/nidhivinod/Zotero/storage/SJFLJ4ZE/Groom et al. - 2004 - Heat damage in sclerophylls is influenced by their.pdf}
+}
+
 @article{grossiordPlantResponsesRising2020,
   title = {Plant Responses to Rising Vapor Pressure Deficit},
   author = {Grossiord, Charlotte and Buckley, Thomas N. and Cernusak, Lucas A. and Novick, Kimberly A. and Poulter, Benjamin and Siegwolf, Rolf T. W. and Sperry, John S. and McDowell, Nate G.},
@@ -6959,6 +6970,23 @@
   file = {/Users/nidhivinod/Zotero/storage/Z8L8245H/Matsubara et al. - 2009 - Sun-shade patterns of leaf carotenoid composition .pdf;/Users/nidhivinod/Zotero/storage/YSZ5GWCI/fp08214.html}
 }
 
+@article{matusickSuddenForestCanopy2013,
+  title = {Sudden Forest Canopy Collapse Corresponding with Extreme Drought and Heat in a Mediterranean-Type Eucalypt Forest in Southwestern {{Australia}}},
+  author = {Matusick, George and Ruthrof, Katinka X. and Brouwers, Niels C. and Dell, Bernard and Hardy, Giles St. J.},
+  date = {2013-05-01},
+  journaltitle = {Eur J Forest Res},
+  volume = {132},
+  number = {3},
+  pages = {497--510},
+  issn = {1612-4677},
+  doi = {10.1007/s10342-013-0690-5},
+  url = {https://doi.org/10.1007/s10342-013-0690-5},
+  urldate = {2022-01-26},
+  abstract = {Drought and heat-induced forest dieback and mortality are emerging global concerns. Although Mediterranean-type forest (MTF) ecosystems are considered to be resilient to drought and other disturbances, we observed a sudden and unprecedented forest collapse in a MTF in Western Australia corresponding with record dry and heat conditions in 2010/2011. An aerial survey and subsequent field investigation were undertaken to examine: the incidence and severity of canopy dieback and stem mortality, associations between canopy health and stand-related factors as well as tree species response. Canopy mortality was found to be concentrated in distinct patches, representing 1.5~\% of the aerial sample (1,350~ha). Within these patches, 74~\% of all measured stems ({$>$}1~cm DBHOB) had dying or recently killed crowns, leading to 26~\% stem mortality six~months following the collapse. Patches of canopy collapse were more densely stocked with the dominant species, Eucalyptus marginata, and lacked the prominent midstorey species Banksia grandis, compared to the surrounding forest. A differential response to the disturbance was observed among co-occurring tree species, which suggests contrasting strategies for coping with extreme water stress. These results suggest that MTFs, once thought to be resilient to climate change, are susceptible to sudden and severe forest collapse when key thresholds have been reached.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/SE8VY3EF/Matusick et al. - 2013 - Sudden forest canopy collapse corresponding with e.pdf}
+}
+
 @article{mau_temperate_2018,
   title = {Temperate and {{Tropical Forest Canopies}} Are {{Already Functioning}} beyond {{Their Thermal Thresholds}} for {{Photosynthesis}}},
   author = {Mau, Alida and Reed, Sasha and Wood, Tana and Cavaleri, Molly},
@@ -8350,6 +8378,24 @@
   keywords = {acclimation,economics spectrum,leaf structure,light gradients,nitrogen (N) allocation,nitrogen content,photosynthetic capacity,plasticity},
   annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.13096},
   file = {/Users/nidhivinod/Zotero/storage/4ANYL6FV/Niinemets et al. - 2015 - A worldwide analysis of within-canopy variations i.pdf;/Users/nidhivinod/Zotero/storage/LPSIJWEA/nph.html}
+}
+
+@article{nolanHydraulicFailureTree2021,
+  title = {Hydraulic Failure and Tree Size Linked with Canopy Die-Back in Eucalypt Forest during Extreme Drought},
+  author = {Nolan, Rachael H. and Gauthey, Alice and Losso, Adriano and Medlyn, Belinda E. and Smith, Rhiannon and Chhajed, Shubham S. and Fuller, Kathryn and Song, Magnolia and Li, Xine and Beaumont, Linda J. and Boer, Matthias M. and Wright, Ian J. and Choat, Brendan},
+  date = {2021},
+  journaltitle = {New Phytologist},
+  volume = {230},
+  number = {4},
+  pages = {1354--1365},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17298},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.17298},
+  urldate = {2022-01-25},
+  abstract = {Eastern Australia was subject to its hottest and driest year on record in 2019. This extreme drought resulted in massive canopy die-back in eucalypt forests. The role of hydraulic failure and tree size on canopy die-back in three eucalypt tree species during this drought was examined. We measured pre-dawn and midday leaf water potential (Ψleaf), per cent loss of stem hydraulic conductivity and quantified hydraulic vulnerability to drought-induced xylem embolism. Tree size and tree health was also surveyed. Trees with most, or all, of their foliage dead exhibited high rates of native embolism (78–100\%). This is in contrast to trees with partial canopy die-back (30–70\% canopy die-back: 72–78\% native embolism), or relatively healthy trees (little evidence of canopy die-back: 25–31\% native embolism). Midday Ψleaf was significantly more negative in trees exhibiting partial canopy die-back (−2.7 to −6.3 MPa), compared with relatively healthy trees (−2.1 to −4.5 MPa). In two of the species the majority of individuals showing complete canopy die-back were in the small size classes. Our results indicate that hydraulic failure is strongly associated with canopy die-back during drought in eucalypt forests. Our study provides valuable field data to help constrain models predicting mortality risk.},
+  langid = {english},
+  keywords = {cavitation,drought,Eucalyptus,hydraulic failure,mortality,tree size,water potential,xylem embolism},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17298}
 }
 
 @article{novickIncreasingImportanceAtmospheric2016,
