--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -207,7 +207,8 @@ Wong SC, Cowan IR, Farquhar GD. 1979. Stomatal conductance correlates with photo
 
 A defining feature of forest canopies is their vertical variation in environment and morphology and physiology, originally described through the sun-shade leaf dichotomy or even earlier through vertical stratification diagrams as in Pearson (1971), dating further back such as the classic work of P. W. Richards (1952). Such observations were carried through to the forest meteorology community by Monteith, Jarvis and others in the 1980s (Monteith & Unsworth 1990), and there are well-known patterns in micrometeorology through canopies and first-principle understanding of their meaning for energy balance within canopies. I read this review keenly interested in what these known aspects would mean for the interactions amongst leaf traits and sensitivity to temperature, tie them back to some empirical findings of more recent vintage, and possibly to gain some insights into canopy dieback phenomena during heat events or with climate warming. In the end, the latter weren’t discussed but the authors are applauded for taking on such a huge topic. Fig. 1 is a useful entrée to the subject area.
 
-**Thank you for the review. We have added citations to the references mentioned here. We have also added some discussion of canopy dieback events(?)... [details].**
+**Thank you for the review. We have added citations to the references mentioned here:[@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021]. We have also added some discussion of canopy dieback events here:**
+**Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can rapidly dry soils up, exacerbating effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].**
 
 *Nidhi, be sure to cite all the references listed here.*
 
