--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -508,7 +508,7 @@ When the canopy trees die, this will open canopy gaps, as discussed in the follo
 ### Canopy disturbance
 
 As discussed above, rising temperatures and severe droughts place the canopy trees at particularly elevated risk of mortality. 
-Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
+Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can rapidly dry soils up, exacerbating effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the canopy [@starkReframingTropicalSavannization2020]. 
 While wetter forests can prove quite resilient to such changes [@millerReducedImpactLogging2011], this shift to hotter and drier microclimates can often make forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
