--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -291,7 +291,7 @@ Increases in chlorophyll a/b ratios with height reflect the greater light availa
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition, and therefore also serve as thermoprotection and postpone heat damage [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. With saturating irradiance in canopy leaves, unused energy from photosystem II antennae is further dissipated as heat energy through non-photochemical quenching (NPQ) [@mathurPhotosyntheticEfficiencySun2018b]. Efficient light-use is optimized through this process while preventing the accumulation of excess light, provoking the over production of harmful reactive oxygen species (ROS). However, at a photon flux density (PPFD) of $200\mu molm^{-2}s^{-1}$, within beech canopy, shaded lower canopy leaves have been observed to have higher NPQ rates than upper canopy reflecting rapid photosynthetic kinetics in shaded leaves as an acclimation to sunflecks. However, beyond this PPFD threshold, NPQ rates of upper canopy increase with an increase in light intensity [@scartazzaInvestigatingEuropeanBeech2016a]. The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
+Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition, and therefore also serve as thermoprotection and postpone heat damage [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. With saturating irradiance in canopy leaves, unused energy from photosystem II antennae is further dissipated as heat energy through non-photochemical quenching (NPQ) [@mathurPhotosyntheticEfficiencySun2018b]. Efficient light-use is optimized through this process while preventing the accumulation of excess light, provoking the over production of harmful reactive oxygen species (ROS). However, at a photon flux density (PPFD) of $200\mu molm^{-2}s^{-1}$, within beech canopy, shaded lower canopy leaves have been observed to have higher NPQ rates than upper canopy reflecting rapid photosynthetic kinetics in shaded leaves as an acclimation to sunflecks. Beyond this PPFD threshold, NPQ rates of upper canopy increase with an increase in light intensity [@scartazzaInvestigatingEuropeanBeech2016a]. The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
 
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
 Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
