--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -357,6 +357,9 @@ line383: d13C is NOT a concentration, it is an isotope ratio. Please revise.
 
 line404-405: A cause-effect for an earlier, juvenile understory tree leaf-out is implied here, and I;m not sure that is demonstrated. There are other phenomena underlying this e.g. turgor, hydraulics, hormones, etc.
 
+**Thank you for pointing this out. In line404-405, we are concentrated on interactions between microenvironments and function. We edited the text to emphasize the mechanisms for earlier bud break in the understory, including warmer temperatures, and the benefits of maximizing carbon gain before overstory closure reduces light availability [added ref. @leeSpringPhenologicalEscape2021]. We edited the rest of the paragraph to more clearly emphasize mechanisms of feedbacks between vertically structured microenvironments, leaf phenology, and forest function.**
+
+
 line475: 'because water supply often cannot meet the demands incurred …'. How do we know how frequent this is? Evidence?
 
 **We have added four references showing that stomatal conductance is often limited by imbalance of water supply and evaporative demand for leaves in more elevated or more sunlit canopy positions [@yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010].**
