--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -253,8 +253,8 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 ### 3.1. Intraspecific trait variation
 
 Within-canopy, leaf traits vary along the vertical light gradient [*i.e.,* sun and shade leaves, @casasSunShadeLeaves2011; @binLeafTraitExpression2022] at a biochemical, anatomical and structural level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
-Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], so further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments. 
-It has been established that independently of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. 
+Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], so further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments. 
+It has been established that independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. 
 Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a]. 
 
 \newpage
@@ -298,11 +298,10 @@ Less than half of tree species express significant light-dependent emissions [@k
 
 The vertical structure of microenvironments likely influences forest photosynthetic capacity [@rey-sanchez_spatial_2016] via leaf phenology. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
-For example, in a temperate deciduous forest, spring bud-break tended to occur earlier among juvenile trees in the more sheltered understory, where temperature sums accumulated more rapidly, than among conspecific canopy trees [@augspurgerDifferencesLeafPhenology2003].
-Within tropical dry-deciduous species in Panama, the fraction of seasonally deciduous individuals increased toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. 
-Even in evergreen forests, environmental variation alters leaf age distributions [@albertCrypticPhenologyPlants2019], which affects forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and heat stress via age-specific leaf function [@albertCrypticPhenologyPlants2019]. 
-For instance, in tropical evergreen forests, because leaf turnover rates of sun leaves in the upper canopy is faster than in the subcanopy, less damage accumulates [@millerOnlySunlitLeaves2021]. 
-Leaf age affects vulnerability to heat stress and has a strong effect on metabolism [@mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015; @kikuzawaSynthesisRelationshipsLeaf2006], and can be expected to similarly scale through vertically structured phenology to affect forest responses to heat anomalies.
+In temperate deciduous forests, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
+Early leaf-out allows some tree saplings to do the majority of their annual carbon fixation before the overstory closes and reduces light availability [@leeSpringPhenologicalEscape2021]. 
+Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019]. Leaf turnover is faster in the upper canopy than the understory, putatively due to more rapid accumulation of leaf damage [@osadaLeafDynamicsMaintenance2001; @millerOnlySunlitLeaves2021].
+Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015]. Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
 
 ### 3.2. Interspecific trait variation 
 
